# package-sorter

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: main.py
src/app/: PackageSorting.py  __init__.py
tests/: test_sanity.py  test_sorter.py
