[project]
name = "thoughtful-ai-challenges"
version = "0.1.0"
description = ""
authors = [
    {name = "andre1gauna",email = "andregauna@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "thoughtful_ai_challenges", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-env = "^1.1.5"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
